--- a/register.html
+++ b/register.html
@@ -95,7 +95,7 @@
             </table>
             <input type="submit" value="Create Account" />
             <br>
-            <a href="index.html">Already a user? Sign In</a>
+            <a href="index.php">Already a user? Sign In</a>
 
         </form>
     </center>
